--- a/index.html
+++ b/index.html
@@ -136,14 +136,13 @@
 p.ex1 {
   margin-left: 1000px;
 }
+	   
 p.ex2 {
   margin-left: 850px;
 }
 
-img.ex3 {
-	margin-left: 200px;
-}
-	   
+<!'ex1' function shifts pixels 250 to left (puts them in the middle of the page)
+
   </style>
 
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
@@ -218,6 +217,7 @@ img.ex3 {
 </head>
    
 <p id="Introduction_InText">
+<img src="b2fg.jpg" alt="Figure1" style= "float:right;width:602px;height:236;">
 	The term nucleosynthesis is a concept that defines how the Universe evolved from a basic mixture of hydrogen and helium into a rich environment of elements that exist today. By tracing how different elements are produced in different stages of stellar evolution, scientists can build a clearer picture of how matter has changed over countless years
 	and how these changes relate to the modern world. Nucleosynthesis, stellar or otherwise, began immediately after the Big Bang, when the Universe was extremely hot and dense. At that time, only the very lightest elements 
 	(majorly hydrogen, helium and a miniscule abundance of lithium) were formed. Heavier elements could not emerge because of the Universe’s rapid expansion and cooling (Clayton, 2003).
@@ -225,9 +225,7 @@ img.ex3 {
 	the mid-20th century from massively influential research that laid out a detailed description of how stars manufacture new elements throughout their lifetimes, forming the 
 	basis for the highly regarded modern theories of stellar evolution (Burbidge, Burbidge, Fowler and Hoyle, 1957). 
 </p>
-
-<img src="hydrogen burning.png" alt="Figure2" width="240" height="323"> <img class= "ex3", src="b2fg.jpg" alt="Figure1" width="602" height="236"> 
-
+	
 <p id="Figure_InText">	
 <pre>
 	An image depicting 'B2FH' and their remarkable formulaic outline of core burning.
@@ -241,8 +239,9 @@ img.ex3 {
    <hr>
 </head>
 
-<p class = "ex1", id="Analysis_InText">
+<p id="Analysis_InText">
 <!'ex1' function shifts pixels to left (puts them in the middle of the page)
+<img src="hydrogen burning.png" alt="Figure2" style= "float:left;width:600px;height:806px;">
 	Element forging occurs in major stages, where the first is hydrogen burning: a process in which hydrogen nuclei fuse to form helium, releasing copious amounts of energy that allow a star to remain stable. In stars comparable to the Sun, this happens mainly through a proton-proton chain unlike stars of greater masses, where the carbon-nitrogen-oxygen cycle becomes the dominant chain (Prialnik, 2009). When the hydrogen in the core eventually fuses out, the internal temperature rises and stars begin helium burning instead. By the triple-alpha process, where three helium nuclei combine to form carbon, occasionally additional reactions within this can lead to the production of oxygen. Carbon and oxygen are among the most integral in shaping the chemistry of the Universe and are vital for the existence of life as we know it (Kippenhahn, Weigert and Weiss, 2012). At this stage, stars start to expand and cool at the surface, often becoming red giants.
 	<br /> <br />
 	In even greater masses of stars than previously mentioned, this process continues further in increasingly complex ways. After helium burning almost subsides, the core contracts further and reaches a large enough temperature to trigger carbon burning, which outcomes in elements such as neon, sodium and magnesium. As the temperature continues to rise, the star has potential to undergo neon burning and oxygen burning, each a stage that could yield heavier elements like silicon and sulphur. Ultimately, the star’s core ends with silicon burning, creating iron and nickel. Unlike lighter elements, fusion of iron does not result in the release of energy but absorbs it instead (Hansen, Kawaler and Trimble, 2004). As a star’s core is consequently iron abundant at the end of these mechanisms, it is unable to generate enough outward pressure to resist gravity, thus leading to its catastrophic collapse.
