--- a/index.html
+++ b/index.html
@@ -136,13 +136,6 @@
 p.ex1 {
   margin-left: 1000px;
 }
-	   
-p.ex2 {
-  margin-left: 850px;
-}
-
-<!'ex1' function shifts pixels 250 to left (puts them in the middle of the page)
-
   </style>
 
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
@@ -194,7 +187,7 @@ p.ex2 {
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
 
 <body>
-<body style="background-color:#FFFFFF;margin-left:50px;">
+<body style="background-color:rgba(76, 67, 134, 0.5);margin-left:50px;">
 
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ///////////////////////// Paragraph Headings + Text //////////////////////////// -->
