--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     // Calculate the sum of all selected sections
     const totalWordCount = IntroductionCount + FigureCount + AnalysisCount + DiscussionCount;
     // Display the total word count
-    document.getElementById("totalWordCount").innerText = `Word count: ${totalWordCount}`;
+    document.getElementById("totalWordCount").innerText = `Word Count: ${totalWordCount}`;
   }
   // Run the function for specific sections and display total count when the page loads
   window.onload = displayTotalWordCount;
@@ -93,12 +93,12 @@
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   
   <head>  
-  <img src="download.png" alt="Banner" width="900" height="300">
+  <img src="download.png" alt="Banner" width="900" height="275">
     <h1><b>ENG0018 Computer Laboratory 2025/26</b></h1>
     
     <h2>Student URN: 6936539</h2>
   <hr>
-  <h2 style="font-family:calibri;"<b>Conference Paper: The Fundamentals of Stellar Nucleosynthesis and its Modern Day Application </b></h2>
+  <h2 style="font-family:arial;"<b>Conference Paper: The Fundamentals of Stellar Nucleosynthesis and its Modern Day Application </b></h2>
   <hr>
   </head> 
 
