--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
 p.ex1 {
   margin-left: 1900px;
 }
+p.ex2 {
+  margin-right: 580px;
+}
+	   
   </style>
 
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
@@ -216,7 +220,7 @@ p.ex1 {
    <hr>
 </head>
    
-<p id="Introduction_InText">
+<p class = "ex2", id="Introduction_InText">
 <img src="b2fg.jpg" alt="Figure1" style= "float:right;width:561px;height:220px;">
 	The term nucleosynthesis is a concept that defines how the Universe evolved from a basic mixture of hydrogen and helium into a rich environment
 	of elements that exist today. By tracing how different elements are produced in different stages of stellar evolution, scientists can build a 
@@ -244,7 +248,7 @@ p.ex1 {
 </head>
 
 <p id="Analysis_InText">
-<img src="hydrogen burning.png" alt="Figure2" style= "float:left;width:300px;height:403px;">
+<img src="hydrogen burning.png" alt="Figure2" style= "float:left;width:610px;height:820px;">
 	Element forging occurs in major stages, where the first is hydrogen burning: a process in which hydrogen nuclei fuse to form helium, releasing copious amounts of energy that allow a star to remain stable. In stars comparable to the Sun, this happens mainly through a proton-proton chain unlike stars of greater masses, where the carbon-nitrogen-oxygen cycle becomes the dominant chain (Prialnik, 2009). When the hydrogen in the core eventually fuses out, the internal temperature rises and stars begin helium burning instead. By the triple-alpha process, where three helium nuclei combine to form carbon, occasionally additional reactions within this can lead to the production of oxygen. Carbon and oxygen are among the most integral in shaping the chemistry of the Universe and are vital for the existence of life as we know it (Kippenhahn, Weigert and Weiss, 2012). At this stage, stars start to expand and cool at the surface, often becoming red giants.
 	<br /> <br />
 	In even greater masses of stars than previously mentioned, this process continues further in increasingly complex ways. After helium burning almost subsides, the core contracts further and reaches a large enough temperature to trigger carbon burning, which outcomes in elements such as neon, sodium and magnesium. As the temperature continues to rise, the star has potential to undergo neon burning and oxygen burning, each a stage that could yield heavier elements like silicon and sulphur. Ultimately, the star’s core ends with silicon burning, creating iron and nickel. Unlike lighter elements, fusion of iron does not result in the release of energy but absorbs it instead (Hansen, Kawaler and Trimble, 2004). As a star’s core is consequently iron abundant at the end of these mechanisms, it is unable to generate enough outward pressure to resist gravity, thus leading to its catastrophic collapse.
