Fix HTML syntax for image tag

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ p.ex2 {
 </head>
    
 <p class = "ex2", id="Introduction_InText">
-<img src="b2fg.jpg" alt="Figure1" style= "float:right;width:561px;height:220px;">
+<img src="b2fg.jpg" alt="Figure1" style= "float:right;width:561px;height:220px;"> <br />
 	The term nucleosynthesis is a concept that defines how the Universe evolved from a basic mixture of hydrogen and helium into a rich environment
 	of elements that exist today. By tracing how different elements are produced in different stages of stellar evolution, scientists can build a 
 	clearer picture of how matter has changed over countless years and how these changes relate to the modern world. 
