--- a/index.html
+++ b/index.html
@@ -134,10 +134,7 @@
  
    <style>
 p.ex1 {
-  margin-left: 1900px;
-}
-p.ex2 {
-  margin-right: 580px;
+  margin-left: 2500px;
 }
 	   
   </style>
@@ -220,8 +217,8 @@ p.ex2 {
    <hr>
 </head>
    
-<p class = "ex2", id="Introduction_InText">
-<img src="b2fg.jpg" alt="Figure1" style= "float:right;width:561px;height:220px;"> <br />
+<p id="Introduction_InText">
+<br /> <img src="b2fg.jpg" alt="Figure1" style= "float:right;width:561px;height:220px;"> <br />
 	The term nucleosynthesis is a concept that defines how the Universe evolved from a basic mixture of hydrogen and helium into a rich environment
 	of elements that exist today. By tracing how different elements are produced in different stages of stellar evolution, scientists can build a 
 	clearer picture of how matter has changed over countless years and how these changes relate to the modern world. 
@@ -279,6 +276,13 @@ p.ex2 {
 	Delving into the field of medicine, the insight on stellar nucleosynthesis has made medical diagnostics and treatments possible due to specific isotopes that originated from these nuclear reactions. Our understanding of these core nuclear processes has allowed the production of medical isotopes which are used globally in both imaging and cancer treatments. Furthermore, industrial manufacturing techniques have been developed by isotopes and defined the utility of neutron-capture based drugs, reactors and even protective materials (Krane, 1988).
 </p>
 
+<p id="Figure_InText">	
+<pre>
+	Fig.2 - An outline depicting the remarkable formulaic stages of core burning
+	<br />
+</pre>
+</p>
+	
 <br/> <br/> 
 	
 <head>
