--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ p.ex1 {
 	(majorly hydrogen, helium and a miniscule abundance of lithium) were formed. Heavier elements could not emerge because of the Universe’s rapid expansion and cooling (Clayton, 2003).
 	The emersion of these would require much more extreme and sustained conditions, such as those found inside stars. A major breakthrough in grasping this process came about in
 	the mid-20th century from massively influential research that laid out a detailed description of how stars manufacture new elements throughout their lifetimes, forming the 
-	basis for the highly regarded modern theories of stellar evolution (Burbidge, Burbidge, Fowler and Hoyle, 1957). 
+	basis for the highly regarded modern theories of stellar evolution <a href="#(Burbidge, Burbidge, Fowler and Hoyle, 1957)">(Burbidge, Burbidge, Fowler and Hoyle, 1957).</a> 
 </p>
 
 	
