--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ p.ex1 {
 
 	
 <p class = "ex1", id="Figure_InText">	
-	Fig.1 - 'B2FH' in 1957 after making their noble discovery.
+	Fig.1 - 'B<sup>2</sup>FH', or the Burbidges, Fowler and Hoyle in 1957 after making their noble discovery.
 	<br />
 </p>
 	
@@ -271,7 +271,8 @@ p.ex1 {
 </p>
 
 <p id="Figure_InText">	
-	Fig.2 - An outline depicting the remarkable formulaic stages of core burning
+	<br /> <br />v<br />v<br /> <br />
+	Fig.2 - The originial depiction of the remarkable formulaic stages of core burning from B<sup>2</sup>FH
 </p>
 	
 <br/> <br/> 
