Fix HTML structure and improve figure caption

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ p.ex1 {
 </head>
    
 <p id="Introduction_InText">
-<br /> <img src="b2fg.jpg" alt="Figure1" style= "float:right;width:561px;height:220px;"> <br />
+<img src="b2fg.jpg" alt="Figure1" style= "float:right;width:561px;height:220px;"> 
 	The term nucleosynthesis is a concept that defines how the Universe evolved from a basic mixture of hydrogen and helium into a rich environment
 	of elements that exist today. By tracing how different elements are produced in different stages of stellar evolution, scientists can build a 
 	clearer picture of how matter has changed over countless years and how these changes relate to the modern world. 
@@ -197,8 +197,8 @@ p.ex1 {
 </p>
 
 	
-<p class = "ex1", id="Figure_InText">	
-	Fig.1 - 'B<sup>2</sup>FH', or the Burbidges, Fowler and Hoyle in 1957 after making their noble discovery.
+<p id="Figure_InText">	
+	Fig.1 - 'B<sup>2</sup>FH' or the Burbidges, Fowler and Hoyle in 1957 after making their noble discovery.
 	<br />
 </p>
 	
