--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ p.ex1 {
 
 <p id="Figure_InText">	
 	<br /> <br /> <br />
-	Fig.2 - The originial depiction of the remarkable formulaic stages of core burning from B<sup>2</sup>FH
+	Fig.2 - The originial depiction of the remarkable formulaic stages of core burning from B<sup>2</sup>FH's research.
 </p>
 	
 <br/> <br/> 
