--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ p.ex1 {
    <hr>
 </head>
 
-<p id="Analysis_InText">
+<p class = "ex1", id="Analysis_InText">
 <img src="hydrogen burning.png" alt="Figure2" style= "float:left;width:596px;height:800px;"> <br />
 	Element forging occurs in major stages, where the first is hydrogen burning: a process in which hydrogen nuclei fuse to form helium, releasing copious amounts of energy that allow a star to remain stable. In stars comparable to the Sun, this happens mainly through a proton-proton chain unlike stars of greater masses, where the carbon-nitrogen-oxygen cycle becomes the dominant chain <a href="#References">(Prialnik, 2009).</a> When the hydrogen in the core eventually fuses out, the internal temperature rises and stars begin helium burning instead. By the triple-alpha process, where three helium nuclei combine to form carbon, occasionally additional reactions within this can lead to the production of oxygen. Carbon and oxygen are among the most integral in shaping the chemistry of the Universe and are vital for the existence of life as we know it <a href="#References">(Kippenhahn, Weigert and Weiss, 2012).</a> At this stage, stars start to expand and cool at the surface, often becoming red giants.
 	<br /> <br />
