--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
 p.ex1 {
   margin-right: 90px;
 }
+
+video.ex2 {
+	display:inline; 
+}
 	   
   </style>
 
@@ -146,6 +150,8 @@ p.ex1 {
 
 </table>
 
+<!-- <video class = "ex2", src="ENG0018 Presentation.mp4" width="800" height="450" controls> </video>
+	
    
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Body Design ///////////////////////////////////// -->
