Fix background color and update body style

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           }
 
           tr:nth-child(even) {
-             background-colour: #faede6;
+             background-colour: rgba(249, 242, 247);
           }
        
     </style>
@@ -158,7 +158,7 @@ video.ex2 {
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
 
 <body>
-<body style="background-color:rgba(76, 67, 134, 0.25);margin-left:50px;">
+<body style="background-color:rgba(76, 67, 134, 0.45);margin-left:50px;">
 
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ///////////////////////// Paragraph Headings + Text //////////////////////////// -->
