--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             font-family: calibri, sans-serif;
             border-collapse: collapse;
             width: 30%;
+			background-colour: rgba(249, 242, 247);
 
           }
 
@@ -87,7 +88,7 @@
           }
 
           tr:nth-child(even) {
-             background-colour: rgba(249, 242, 247);
+             background-colour: #dddddd;
           }
        
     </style>
