Refactor comments and remove commented video element
Removed commented video element and added new comments for organization.

--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@ p.ex1 {
   margin-right: 90px;
 }
 
-video.ex2 {
+video {
 	display:inline; 
 }
 	   
   </style>
-
+<div></div>
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////// Code to allow CSS for design //////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
@@ -151,8 +151,15 @@ video.ex2 {
 
 </table>
 
-<!-- <video class = "ex2", src="ENG0018 Presentation.mp4" width="800" height="450" controls> </video>
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ////////////////////////////// Video Design //////////////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
 	
+<!-- <center>
+		<div class= "tab">
+			<video src="ENG0018 Presentation.mp4" width="800" height="450" controls> </video>
+		</div>
+	</center>
    
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Body Design ///////////////////////////////////// -->
