--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
           }
 
           td, th {
-            border: 1px solid #dddddd;
+            border: 2px solid rgba(249, 242, 247);
             text-align: left;
             padding: 8px;
           }
 
           tr:nth-child(even) {
-             background-colour: #dddddd;
+             background-colour: rgba(249, 242, 247);
           }
        
     </style>
