--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@ img.ex2 {
   <!-- ////////////////////////////// Video Design //////////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
 	
-<!-- <center>
+<<center>
 		<div class= "tab">
 			<video src="ENG0018 Presentation.mp4" width="800" height="450" controls> </video>
 		</div>
-	</center>
+</center>
    
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Body Design ///////////////////////////////////// -->
