--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     
     <h2>Student URN: 6936539</h2>
   <hr>
-  <h2 style="font-family:calibri;"<b>Conference Paper: The Fundamentals of Stellar Nucleosynthesis and its Modern Day Application </b></h2>
+  <h2 style="font-family:calibri;"<b>Conference Paper: The Significance of Stellar Nucleosynthesis Fundamentals and its Modern Day Application</b></h2>
   <hr>
   </head> 
 
