Change text alignment in table cells to right

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
           td, th {
             border: 2px solid rgba(249, 242, 247);
-            text-align: left;
+            text-align: right;
             padding: 8px;
           }
 
