--- a/index.html
+++ b/index.html
@@ -78,14 +78,16 @@
             font-family: calibri, sans-serif;
             border-collapse: collapse;
             width: 10%;
-			background-colour: rgba(249, 242, 247);
 
           }
 
           td, th {
             border: 2px solid rgba(249, 242, 247);
+			border-radius: 5px;
+			border-colour: #6d63b4
             text-align: right;
-            padding: 8px;
+            padding: 10px;
+			background-colour: rgba(249, 242, 247);
           }
 
           tr:nth-child(even) {
