Fix video tag placement in index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
   <hr>
   </head> 
 
-<video src="ENG0018 Presentation.mp4" width="800" height="450" controls> </video>
 	
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Style For Tables //////////////////////////////// -->
@@ -129,7 +128,7 @@ img.ex2 {
   <!-- //////////////////////////// Table of Contents ///////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
 
-<table>
+<video src="ENG0018 Presentation.mp4" width="800" height="450" controls> </video> <table>
 
 <tr>
    <th><h3><b>Content Table</b></h3></th>
