Add second ID to Applications and Utility header

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ img.ex2 {
 
 <head>
    <hr>
-      <h3 id="Applications and Utility">Applications and Utility</h3>
+      <h3 id="Applications and Utility", id="Discussion_InText">Applications and Utility</h3>
    <hr>
 </head>
    
