--- a/index.html
+++ b/index.html
@@ -81,12 +81,11 @@
           }
 
           td, th {
-            border: 2px solid rgba(249, 242, 247);
+            border: 3px solid rgba(249, 242, 247);
 			border-radius: 5px;
 			border-colour: #6d63b4
             text-align: right;
             padding: 10px;
-			background-colour: rgba(249, 242, 247);
           }
 
           tr:nth-child(even) {
@@ -113,7 +112,7 @@ img.ex2 {
 }
 	   
   </style>
-<div></div>
+
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////// Code to allow CSS for design //////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
@@ -128,7 +127,9 @@ img.ex2 {
   <!-- //////////////////////////// Table of Contents ///////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
 
-<video src="ENG0018 Presentation.mp4" width="800" height="450" controls> </video> <table>
+<video src="ENG0018 Presentation.mp4" width="800" height="450" controls> </video> 
+
+<table>
 
 <tr>
    <th><h3><b>Content Table</b></h3></th>
