--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
           th, td {
             border: 3px solid rgba(249, 242, 247);
             text-align: right;
-            padding: 10px;
+            padding: 8px;
           }
 
-          tr:nth-child(even) {
-             background-colour: rgba(249, 242, 247);
+          tr:nth-child(odd) {
+             background-colour: rgba(107, 97, 180, 0.5);
           }
        
     </style>
