--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     
     <h2>Student URN: 6936539</h2>
   <hr>
-  <h2 style="font-family:calibri;"<b>Conference Paper: The Significance of Stellar Nucleosynthesis Fundamentals and its Modern Day Application</b></h2>
+  	<h2 style="font-family:calibri;"<b>Conference Paper: The Significance of Stellar Nucleosynthesis Fundamentals and its Modern Day Application</b></h2>
   <hr>
   </head> 
 
@@ -82,11 +82,11 @@
 
           th, td {
             border: 3px solid rgba(249, 242, 247);
-            text-align: right;
+            text-align: left;
             padding: 8px;
           }
 
-          tr:nth-child(odd) {
+          tr:nth-child(even) {
              background-colour: rgba(107, 97, 180, 0.5);
           }
        
@@ -149,7 +149,7 @@ img.ex2 {
    <td><a href="#Applications and Utility">Applications and Utility</td>
 </tr>
 
-	<tr>
+<tr>
    <td><a href="#References">References</td>
 </tr>
 
