--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@ video {
 }
 
 img.ex2 { 
-	display:block; margin: 20px 0; 
+	display:block; margin: 20px 0;
+	padding: 10px;
 }
 	   
   </style>
@@ -195,7 +196,7 @@ img.ex2 {
 </head>
    
 <p id="Introduction_InText">
-<img src="b2fg.jpg" alt="Figure1" style= "float:right;width:561px;height:220px;"> 
+<img src="b2fg.jpg" alt="Figure1" style= "float:right;width:561px;height:220px;" usemap="#peoplemap"> 
 	The term nucleosynthesis is a concept that defines how the Universe evolved from a basic mixture of hydrogen and helium into a rich environment
 	of elements that exist today. By tracing how different elements are produced in different stages of stellar evolution, scientists can build a 
 	clearer picture of how matter has changed over countless years and how these changes relate to the modern world. 
@@ -207,6 +208,15 @@ img.ex2 {
 	basis for the highly regarded modern theories of stellar evolution <a href="#References">(Burbidge, Burbidge, Fowler and Hoyle, 1957).</a> 
 </p>
 
+<map name="peoplemap">
+	<<area shape="rect" coords="34, 44, 270, 350" href="Burbidges.htm" onclick="myFunction()">
+</map>
+
+<script>
+function myFunction() {
+  alert("This is ...Burdbidge");
+}
+</script>
 	
 <p id="Figure_InText">	
 	Fig.1 - 'B<sup>2</sup>FH' or the Burbidges, Fowler and Hoyle in 1957 after making their noble discovery.
