--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
  
    <style>
 p.ex1 {
-  margin-right: 90px;
+  margin-right: 80px;
 }
-
+p.ex3 {
+  margin-left: 10px;
+}
 img.ex2 { 
 	padding: 10px;
 }
@@ -233,7 +235,7 @@ img.ex2 {
    <hr>
 </head>
    
-<p id="Discussion_InText">
+<p class = "ex1", id="Discussion_InText">
 	Our comprehension of stellar nucleosynthesis has had a profound impact on nuclear fusion and aids astronomers, chemists, biologists and engineers alike today, as we have a new way to interpret the chemical makeup of the stars, galaxies and planets. By studying the light given off by the stars we can observe what elements are present and in what amounts. Doing so permits the calculation of the star’s age, mass, and stage of its life cycle, enabling us to map the evolution of entire galaxies over the past several billion years. One of the key facts we can deduct from the light is the metallicity (the proportion of elements heavier than helium) highlighting the number of generations of stars that have come and gone, and just how rich in heavy elements the area is <a href="#References">(Carroll and Ostlie, 2017).</a>
 	<br /> <br />
 	Following on from this, the study of elements forging in stars act as a major role in planetary science and the search for life beyond Earth as the elements themselves are building blocks for planets, geological processes and biological molecules. When researching exoplanets, some of the first indicators scientists look at are metallicities of their host stars. Stars with higher metallicity are more likely to form rocky planets, making them promising targets in the search for Earth-like worlds <a href="#References">(De Pater and Lissauer, 2015).</a> In this regard, stellar nucleosynthesis does not just explain our own origins but continually guides the search for new life.
@@ -243,8 +245,8 @@ img.ex2 {
 	Delving into the field of medicine, the insight on stellar nucleosynthesis has made medical diagnostics and treatments possible due to specific isotopes that originated from these nuclear reactions. Our understanding of these core nuclear processes has allowed the production of medical isotopes which are used globally in both imaging and cancer treatments. Furthermore, industrial manufacturing techniques have been developed by isotopes and defined the utility of neutron-capture based drugs, reactors and even protective materials <a href="#References">(Krane, 1988).</a>
 </p>
 
-<p id="Figure_InText">	
-	<br /> <br />
+<p class= "ex3", id="Figure_InText">	
+	<br />
 	Fig.2 - The originial depiction of the remarkable formulaic stages of core burning from B<sup>2</sup>FH's research.
 </p>
 	
