--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@ p.ex3 {
 img.ex2 { 
 	padding: 10px;
 }
-	   
+img.ex4 { 
+	padding: 4px;
+}	   
   </style>
 
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
@@ -193,7 +195,7 @@ img.ex2 {
 </head>
    
 <p id="Introduction_InText">
-<img src="b2fg.jpg" alt="Figure1" style= "float:right;width:561px;height:220px;"> 
+<img class = "ex4", src="b2fg.jpg" alt="Figure1" style= "float:right;width:561px;height:220px;"> 
 	The term nucleosynthesis is a concept that defines how the Universe evolved from a basic mixture of hydrogen and helium into a rich environment
 	of elements that exist today. By tracing how different elements are produced in different stages of stellar evolution, scientists can build a 
 	clearer picture of how matter has changed over countless years and how these changes relate to the modern world. 
