--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             font-family: calibri, sans-serif;
             border-collapse: collapse;
             width: 15%;
+			align: left;
 
           }
 
