--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ img.ex4 {
 	
 <head>
    <hr>
-      <h3 id="Introduction and Origins">An Introduction to Nucleosynthesis</h3>
+      <h3 id="Introduction and Origins",id="Introduction_InText">An Introduction to Nucleosynthesis</h3>
    <hr>
 </head>
    
@@ -218,7 +218,7 @@ img.ex4 {
 	
 <head>
    <hr>
-      <h3 id="Theory and Discussion">Forging the Elements</h3>
+      <h3 id="Theory and Discussion",id="Analysis_InText">Forging the Elements</h3>
    <hr>
 </head>
 
