--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           }
 
           th, td {
-            border: 3px solid rgba(249, 242, 247);
+            border: 3px inset rgba(249, 242, 247);
             text-align: left;
             padding: 8px;
           }
