--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   
   <head>  
-  <img src="download.png" alt="Banner" width="900" height="275">
+  <img src="banner edited.png" alt="Banner" width="900" height="275">
     <h1><b>ENG0018 Computer Laboratory 2025/26</b></h1>
     
     <h2>Student URN: 6936539</h2>
