--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
           tr:nth-child(even) {
              background-colour: rgba(107, 97, 180, 0.5);
           }
+
+	      div {
+			  margin:auto;
+		  }
        
     </style>
   
