--- a/index.html
+++ b/index.html
@@ -95,11 +95,22 @@
 		  }
        
     </style>
-  
+
+<style>
+.mycontainer {
+  width:100%;
+  overflow:auto;
+}
+.mycontainer div {
+  width:33%;
+  float:left;
+}
+</style>
+	
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Paragraph Styling /////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
- 
+
    <style>
 p.ex1 {
   margin-right: 65px;
@@ -128,38 +139,41 @@ img.ex4 {
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- //////////////////////////// Table of Contents ///////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
-
-<video src="ENG0018 Presentation.mp4" width="800" height="450" controls> </video> 
-
-<table>
-
-<tr>
-   <th><h3><b>Content Table</b></h3></th>
-</tr>
-
-<tr>
-   <td><a href="#Abstract">Abstract</td>
-</tr>
-
-<tr>
-   <td><a href="#Introduction and Origins">Introduction and Origins</td>
-</tr>
-
-<tr>
-   <td><a href="#Theory and Discussion">Theory and Discussion</td>
-</tr>
+<div class="mycontainer">
 	
-<tr>
-   <td><a href="#Applications and Utility">Applications and Utility</td>
-</tr>
+	<div>
+		<video src="ENG0018 Presentation.mp4" width="800" height="450" controls> </video>
+	</div>
 
-<tr>
-   <td><a href="#References">References</td>
-</tr>
+	<div>
+	<table>
 
+	<tr>
+   		<th><h3><b>Content Table</b></h3></th>
+	</tr>
 
-</table>
+	<tr>
+   		<td><a href="#Abstract">Abstract</td>
+	</tr>
+
+	<tr>
+   		<td><a href="#Introduction and Origins">Introduction and Origins</td>
+	</tr>
+
+	<tr>
+  	 	<td><a href="#Theory and Discussion">Theory and Discussion</td>
+	</tr>
 	
+	<tr>
+   		<td><a href="#Applications and Utility">Applications and Utility</td>
+	</tr>
+
+	<tr>
+  		<td><a href="#References">References</td>
+	</tr>
+
+	</table>
+	</div>
 		
    
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
