--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ img.ex4 {
 
 	</table>
 	</div>
-		
+</div>
    
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Body Design ///////////////////////////////////// -->
