--- a/index.html
+++ b/index.html
@@ -264,13 +264,13 @@ img.ex4 {
 
 
 <p>
-<a href="https://journals.aps.org/rmp/pdf/10.1103/RevModPhys.29.547">Burbidge, E.M., Burbidge, G.R., Fowler, W.A. & Hoyle, F. (1957)</a> <i>Synthesis of the Elements in Stars.</i> Reviews of Modern Physics, 29(4). Available at: https://journals.aps.org/rmp/pdf/10.1103/RevModPhys.29.547 (Accessed: 04 November 2025)
+<a href="https://journals.aps.org/rmp/pdf/10.1103/RevModPhys.29.547">Burbidge, E.M., Burbidge, G.R., Fowler, W.A. & Hoyle, F. (1957)</a> <i>Synthesis of the Elements in Stars.</i> Reviews of Modern Physics, 29(4). (Accessed: 04 November 2025)
 <br /> <br />
-<a href="https://assets.cambridge.org/97811084/22161/frontmatter/9781108422161_frontmatter.pdf">Carroll, B.W. & Ostlie, D.A. (2017)</a> <i>An Introduction to Modern Astrophysics. 2nd ed.</i> Pearson. Available at: https://assets.cambridge.org/97811084/22161/frontmatter/9781108422161_frontmatter.pdf (Accessed: 04 November 2025)
+<a href="https://assets.cambridge.org/97811084/22161/frontmatter/9781108422161_frontmatter.pdf">Carroll, B.W. & Ostlie, D.A. (2017)</a> <i>An Introduction to Modern Astrophysics. 2nd ed.</i> Pearson. (Accessed: 04 November 2025)
 <br /> <br />
-<a href="https://assets.cambridge.org/97805218/23814/frontmatter/9780521823814_frontmatter.pdf">Clayton, D. (2003)</a> <i>Handbook of Isotopes in the Cosmos.</i> Cambridge University Press. Available at: https://assets.cambridge.org/97805218/23814/frontmatter/9780521823814_frontmatter.pdf (Accessed: 04 November 2025)
+<a href="https://assets.cambridge.org/97805218/23814/frontmatter/9780521823814_frontmatter.pdf">Clayton, D. (2003)</a> <i>Handbook of Isotopes in the Cosmos.</i> Cambridge University Press. (Accessed: 04 November 2025)
 <br /> <br />
-<a href="https://www.cambridge.org/gb/universitypress/subjects/physics/planetary-systems-and-astrobiology/planetary-sciences-2nd-edition-1?format=AR&isbn=9781316191958#contents">De Pater, I. and Lissauer, J. (2015)</a> <i>Planetary Sciences.</i> 2nd ed. Cambridge University Press. Available at:  https://www.cambridge.org/gb/universitypress/subjects/physics/planetary-systems-and-astrobiology/planetary-sciences-2nd-edition-1?format=AR&isbn=9781316191958#contents (Accessed: 04 November 2025)
+<a href="https://www.cambridge.org/gb/universitypress/subjects/physics/planetary-systems-and-astrobiology/planetary-sciences-2nd-edition-1?format=AR&isbn=9781316191958#contents">De Pater, I. and Lissauer, J. (2015)</a> <i>Planetary Sciences.</i> 2nd ed. Cambridge University Press. (Accessed: 04 November 2025)
 <br /><br />
 <a href="https://www.scribd.com/doc/247001401/Stellar-Interiors-Physical-Principles-Structure-And-Evolution">Hansen, C.J., Kawaler, S.D. and Trimble, V. (2004)</a> <i>Stellar Interiors.</i> 2nd ed. Springer, pp. 307-313. (Accessed: 04 November 2025)
 <br /><br />
